# ohtuprojekti-robottikoodieditori

./: .gitignore  README.md  package-lock.json  testi  update_grammar.py
.github/workflows/: main.yml
backend/: .pylintrc  pyproject.toml  schema.sql  tasks.py  test_data.sql  user_db.db
backend/javafiles/eetvartti/: ompi  ompiLogo.java
backend/logomotion_gradle/: config.gradle
backend/logomotion_gradle/src/main/java/logo/: Logo.java
backend/src/: create_admin_user.py  credentials.py  db.py  file_service.py  mockcompiler.py  server.py  uselogomotion.py  user_service.py  users.py
backend/src/rest_client/: admin_get_all_files.rest  admin_get_all_users.rest  admin_update_user_password.rest  deploy_robot.rest  get_files.rest  get_pass_req.rest  login.rest  register.rest  save_file.rest  toggle_pass_req.rest  token.rest
backend/src/tests/: conftest.py  file_test.py  test_backend.py  user_test.py
docs/: CONTRIBUTING.md  SETUP.md  Sprint_0_review.md  instructions.md  keywords_english.txt  keywords_finnish.txt  overview.md  robot.md  testing.md  upkeep.md
frontend/: .eslintignore  .eslintrc.js  package-lock.json  package.json
frontend/editor/: package-lock.json  package.json
frontend/src/: App.js  codemirror.js  index.css  index.js  style.js
robottikoodieditori-backend/: pyproject.toml
robottikoodieditori-backend/robottikoodieditori_backend/: server.py
scripts/: setup_dev_enironment.sh  setup_dev_environment.sh  setup_production_environment.sh  update_autocomplete.py  update_grammar.py  update_prepare_grammar.sh  update_prepare_keywords.sh
(+125 files in other folders)
