[tool.poetry]
name = "robokoodieditori-backend"
version = "0.1.0"
description = ""
authors = ["Your name"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"
python-dotenv = "^1.0.0"
logomotion = { git = "https://github.com/theJSZ/logomotion.git" }
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^7.3.0"
pylint = "^2.17.5"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
